--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,17 @@
     <string name="d1">Uno</string>
     <string name="iniciar_sesion">Iniciar Sesión</string>
 
+    <string name="slide_one_title">On Boarding</string>
+    <string name="slide_two_title">On Boarding2</string>
+    <string name="slide_three_title">On Boarding3</string>
+
+    <!-- On Biarding -->
+    <string name="p1">un super michel-grigori es la voz skmflñkwrmfklñwermfkermf asdfewfwefwefwefwefwefwef</string>
+    <string name="p2">un super ivan-jorge michel es la voz skmflñkwrmfklñwermfkermf asdfewfwefwefwefwefwefwef</string>
+    <string name="p3">un super michel-grigori-ivan-jorge es la voz skmflñkwrmfklñwermfkermf asdfewfwefwefwefwefwefwef</string>
+
+
+
     <string name="texto_olvido_contrasena">¿Olvidaste tu Contraseña?</string>
     <string name="title_activity_mapa_prueba">Mapa</string>
     <string name="action_aceptar">Aceptar</string>
