--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,6 @@
     <string name="p3">ASDASD</string>
 
 
-
     <string name="texto_olvido_contrasena">¿Olvidaste tu Contraseña?</string>
     <string name="title_activity_mapa_prueba">Mapa</string>
     <string name="action_aceptar">Aceptar</string>
@@ -45,4 +44,7 @@ Por ello, se ha creado este canal de comunicación con la finalidad de impulsar 
     <string name="title_activity_main">GreenApp</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Estamos en el fragmento %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
